--- a/index.css
+++ b/index.css
@@ -77,8 +77,8 @@ footer{
   border-radius: 25px;
   }
  iframe{
-  width:100vw;
-  height: 100vw;
-  border-radius: 12px;
+  width:100%;
+  height: auto;
+  border-radius: 10px;
   
  }
